--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:sdk": "tsc -p tsconfig.sdk.json",
     "lint": "eslint .",
     "preview": "vite preview"
   },
