Fix NPM Publush GH Actions workflow

--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -28,12 +28,9 @@ jobs:
       - name: Build
         run: npm run build:sdk
 
-      # critical: configure npm auth before publish
-      - name: Configure npm authentication
+      - name: Publish to npm
         run: |
           echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
+          npm publish --access public
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Publish to npm
-        run: npm publish --access public
